--- a/DevimaFeedbackSystem/Feedback/Feedback.API/Feedback.API.csproj
+++ b/DevimaFeedbackSystem/Feedback/Feedback.API/Feedback.API.csproj
@@ -1,9 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Folder Include="Feedbacks\Commands\" />
+		<Folder Include="Feedbacks\Queries\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Grpc.Tools" Version="2.72.0" PrivateAssets="All">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\DevimaFeedbackSystem.Common\DevimaFeedbackSystem.Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Protos\feedback.proto" GrpcServices="Server" />
+	</ItemGroup>
 
 </Project>
