--- a/DevimaFeedbackSystem/DevimaFeedbackSystem.Common/DevimaFeedbackSystem.Common.csproj
+++ b/DevimaFeedbackSystem/DevimaFeedbackSystem.Common/DevimaFeedbackSystem.Common.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
     <PackageReference Include="Grpc.Tools" Version="2.71.0">
