--- a/DevimaFeedbackSystem/DevimaFeedbackSystem.Common/DevimaFeedbackSystem.Common.csproj
+++ b/DevimaFeedbackSystem/DevimaFeedbackSystem.Common/DevimaFeedbackSystem.Common.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Exceptions\" />
+  </ItemGroup>
+
 </Project>
