--- a/DevimaFeedbackSystem/Module/Module.GRPC/Module.GRPC.csproj
+++ b/DevimaFeedbackSystem/Module/Module.GRPC/Module.GRPC.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <ProjectReference Include="..\..\DevimaFeedbackSystem.Common\DevimaFeedbackSystem.Common.csproj" />
   </ItemGroup>
 
 </Project>
