--- a/DevimaFeedbackSystem/Identity/Identity.GRPC/Identity.GRPC.csproj
+++ b/DevimaFeedbackSystem/Identity/Identity.GRPC/Identity.GRPC.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Duende.IdentityServer" Version="7.2.4" />
+  </ItemGroup>
+
 </Project>
