--- a/DevimaFeedbackSystem/Module/Module.GRPC/Module.GRPC.csproj
+++ b/DevimaFeedbackSystem/Module/Module.GRPC/Module.GRPC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DevimaFeedbackSystem.Common\DevimaFeedbackSystem.Common.csproj" />
+	  <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.12.1" />
+	  <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="7.4.0"/>
+	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="7.4.0"/>
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.4.0"/>
   </ItemGroup>
 
   <ItemGroup>
