Fix docker deployment.

--- a/DevimaFeedbackSystem/ApiGateway/APIGateway.API/appsettings.json
+++ b/DevimaFeedbackSystem/ApiGateway/APIGateway.API/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Feedback.Grpc": "https://localhost:7121/",
-  "Module.Grpc": "https://localhost:7245",
+  "Feedback.Grpc": "http://feedback:5014",
+  "Module.Grpc": "http://module:5064",
   "AllowedHosts": "*"
 }
